# shinypkg

./: README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: changelog_from_dev_prs.py  changelog_from_prs.py
src/shinypkg/: __init__.py  _pack.py  cli.py
tests/: test_cli.py  test_pack.py
