[project]
name = "shinypkg"
version = "0.1.0"
description = "A small tool to help you distribute a Shiny app"
readme = "README.md"
authors = [
    { name = "Kenji Sato", email = "mail@kenjisato.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "shiny>=1.4.0",
    "typer>=0.16.0",
]

[project.scripts]
shinypkg = "shinypkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
